syntax = "proto3";

package items;

message Item {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string max_capacity_day = 4;
  double most_liked = 5;
  bool enabled_for_menu = 6;
  int32 is_active = 7;
  bool restricted_18 = 8;
  int32 estimated_minutes_item_preparation = 9;
  string created_at = 10;
  string updated_at = 11;
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
  string max_capacity_day = 3;
  double most_liked = 4;
  bool enabled_for_menu = 5;
  int32 is_active = 6;
  bool restricted_18 = 7;
  int32 estimated_minutes_item_preparation = 8;
}

message CreateItemResponse {
  int32 id = 1;
}

message GetItemByIdRequest {
  int32 id = 1;
}

message GetItemByIdResponse {
  Item item = 1;
}

message UpdateItemRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string max_capacity_day = 4;
  double most_liked = 5;
  bool enabled_for_menu = 6;
  int32 is_active = 7;
  bool restricted_18 = 8;
  int32 estimated_minutes_item_preparation = 9;
}

message UpdateItemResponse {
  bool status = 1;
}

message DeleteItemRequest {
  int32 id = 1;
}

message DeleteItemResponse {
  bool status = 1;
}

message GetAllItemsRequest {}

message GetAllItemsResponse {
  repeated Item items = 1;
}

service ItemService {
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  rpc GetItemById(GetItemByIdRequest) returns (GetItemByIdResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
  rpc GetAllItems(GetAllItemsRequest) returns (GetAllItemsResponse);
}